--- a/src/frontend-crud/crud.ui.portal.jenn/Views/TipoProcedimento/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/TipoProcedimento/Create.cshtml
@@ -20,7 +20,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome"> Tipo <h11>*</h11></label>
                     <div class="col-md-8">
-                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" required="" type="text">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                 </div>
