--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Convenio/Edit.cshtml
@@ -22,10 +22,31 @@
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Nome">Nome do Convenio <h11>*</h11></label>
                         <div class="col-md-8">
-                            <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" required="" type="text">
+                            <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
                             <span asp-validation-for="Nome" class="text-danger"></span>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Nome"></label>
+
+                        <div class="col-md-8">
+                            <div class="input-group">
+                                @await Component.InvokeAsync("PlanoInsert", Model)
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-md-2 control-label" for="Nome"></label>
+                        <div class="col-md-8">
+                            <div class="input-group">
+
+                                @await Component.InvokeAsync("PlanoGrid", Model)
+                            </div>
+                        </div>
+                    </div>
+
 
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Ativo">Status <h11>*</h11></label>
@@ -52,8 +73,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </fieldset>
+                        </div>
+</fieldset>
     </form>
 
 
