--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Empresa/Edit.cshtml
@@ -8,6 +8,7 @@
 
 
 <form asp-controller="Empresa" asp-action="Edit" asp-antiforgery="true" method="post" class="form-horizontal">
+    <input type="hidden" asp-for="Ativo" />
     <input type="hidden" asp-for="EmpresaID" />
     <fieldset>
         <div class="panel panel-primary">
@@ -30,7 +31,7 @@
                                 @if (!ViewBag.Tipo)
                                 {
                                     <label class="radio-inline" for="radios-0">
-                                        <input disabled checked type="radio" name="enc" id="enc"  value="sim" onclick="desabilita('sel_matriz')" required>
+                                        <input disabled checked type="radio" name="enc" id="enc" value="sim" onclick="desabilita('sel_matriz')" required>
                                         Matriz
                                     </label>
                                     <label class="radio-inline" for="radios-1">
@@ -41,7 +42,7 @@
                                 else
                                 {
                                     <label class="radio-inline" for="radios-0">
-                                        <input  disabled type="radio" name="enc" id="enc" value="sim" onclick="desabilita('sel_matriz')" required>
+                                        <input disabled type="radio" name="enc" id="enc" value="sim" onclick="desabilita('sel_matriz')" required>
                                         Matriz
                                     </label>
                                     <label class="radio-inline" for="radios-1">
@@ -62,7 +63,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">Nome <h11>*</h11></label>
                     <div class="col-md-8">
-                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md" required="" type="text">
+                        <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
                         <span asp-validation-for="Nome" class="text-danger"></span>
                     </div>
                 </div>
@@ -71,22 +72,22 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">CNPJ <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md" required="" type="text" maxlength="14"  onkeypress="return somenteNumeros(event);"  pattern="^(\d{2}\.?\d{3}\.?\d{3}\/?\d{4}-?\d{2}|\d{3}\.?\d{3}\.?\d{3}-?\d{2})$">
+                        <input asp-for="cnpj" id="cnpj" name="cnpj" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="14" onkeypress="return somenteNumeros(event);" pattern="^(\d{2}\.?\d{3}\.?\d{3}\/?\d{4}-?\d{2}|\d{3}\.?\d{3}\.?\d{3}-?\d{2})$">
                         <span asp-validation-for="cnpj" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="Nome">Código Cnes <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md" required="" type="text" maxlength="7" onkeypress="return somenteNumeros(event);" pattern="[0-9]+$">
+                        <input asp-for="CodigoCnes" id="CodigoCnes" name="CodigoCnes" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="7" onkeypress="return somenteNumeros(event);" pattern="[0-9]+$">
                         <span asp-validation-for="CodigoCnes" class="text-danger"></span>
                     </div>
                 </div>
                 <!-- Select Basic -->
                 <div class="form-group">
 
-                    <label class="col-md-2 control-label" for="Estado Civil">Conta Empresa<h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="TipoEmpresa">Conta Empresa </label>
                     <div class="col-md-2">
-                        <select asp-for="TipoEmpresa" required id="Tipo Cliente" name="TipoEmpresa" class="form-control">
+                        <select asp-for="TipoEmpresa" required id="TipoEmpresa" name="TipoEmpresa" class="form-control">
                             <option value="">Selecione</option>
                             <option value="0">Gratuita</option>
                             <option value="1">Basico</option>
@@ -104,7 +105,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input id="prependedtext" asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX" required="" type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
+                            <input id="prependedtext" asp-for="Telefone1" name="Telefone1" class="form-control" placeholder="XX XXXXX-XXXX"  type="text" maxlength="13" pattern="\[0-9]{2}\ [0-9]{4,6}-[0-9]{3,4}$"
                                    OnKeyPress="formatar('## #####-####', this)">
                         </div>
                     </div>
@@ -120,37 +121,37 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-2 control-label" for="prependedtext">Email <h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="prependedtext">Email </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="email" asp-for="Email" name="Email" class="form-control" placeholder="email@email.com"   type="email" />
+                            <input id="email" asp-for="Email" name="Email" class="form-control" placeholder="email@email.com" type="email" />
                         </div>
                     </div>
 
-                    <label class="col-md-2 control-label" for="prependedtext">Link loja <h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="prependedtext">Link loja </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual"  type="url" />
+                            <input id="prependedtext" asp-for="url_loja" name="url_loja" class="form-control" placeholder="Link da loja virtual" type="url" />
                         </div>
                     </div>
 
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-2 control-label" for="prependedtext">Logotipo<h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="prependedtext">Logotipo </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon  glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo"  type="url" />
+                            <input id="prependedtext" asp-for="ImgemFrontEmpresa" name="ImgemFrontEmpresa" class="form-control" placeholder="Link do Logotipo" type="url" />
                         </div>
                     </div>
-                    <label class="col-md-2 control-label" for="prependedtext">Google Maps <h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="prependedtext">Google Maps  </label>
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa"   type="url" />
+                            <input id="prependedtext" asp-for="maps" name="maps" class="form-control" placeholder="Link Endereço Google Maps Empresa" type="url" />
                         </div>
                     </div>
                 </div>
@@ -158,11 +159,11 @@
 
 
                 <div class="form-group">
-                    <label class="col-md-2 control-label" for="prependedtext">Responsavel <h11>*</h11></label>
+                    <label class="col-md-2 control-label" for="prependedtext">Responsavel  </label>
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa" required="" type="text" />
+                            <input id="prependedtext" asp-for="Responsavel" name="Responsavel" class="form-control" placeholder="Responsavel pela empresa"  type="text" />
                         </div>
                     </div>
                 </div>
@@ -175,7 +176,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="CEP">CEP <h11>*</h11></label>
                     <div class="col-md-2">
-                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md" required="" type="text" maxlength="8" pattern="[0-9]+$">
+                        <input id="cep" name="cep" asp-for="cep" placeholder="Apenas números" class="form-control input-md"  type="text" maxlength="8" pattern="[0-9]+$">
                     </div>
                     <div class="col-md-2">
                         <button type="button" class="btn btn-primary" id="pesquisa">Pesquisar</button>
@@ -190,14 +191,14 @@
                     <div class="col-md-4">
                         <div class="input-group">
                             <span class="input-group-addon">Rua</span>
-                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder="" required="" type="text">
+                            <input id="rua" name="Logradouro" asp-for="Logradouro" class="form-control" placeholder=""  type="text">
                         </div>
 
                     </div>
                     <div class="col-md-2">
                         <div class="input-group">
                             <span class="input-group-addon">Nº <h11>*</h11></span>
-                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder="" required="" type="text">
+                            <input id="numero" name="numero" asp-for="numero" class="form-control" placeholder=""  type="text">
                         </div>
 
                     </div>
@@ -205,7 +206,7 @@
                     <div class="col-md-3">
                         <div class="input-group">
                             <span class="input-group-addon">Bairro</span>
-                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder="" required="" type="text">
+                            <input id="bairro" asp-for="bairro" name="bairro" class="form-control" placeholder=""  type="text">
                         </div>
 
                     </div>
