--- a/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Create.cshtml
@@ -43,7 +43,7 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">Nome Procedimento <h11>*</h11></label>
                     <div class="col-md-8">
-                        <input id="Nome" asp-for="Nome_pers" name="Nome" placeholder="" class="form-control input-md" required="" type="text">
+                        <input id="Nome" asp-for="Nome_pers" name="Nome_pers" placeholder="" class="form-control input-md"  type="text">
                         <span asp-validation-for="Nome_pers" class="text-danger"></span>
                     </div>
                 </div>
@@ -52,13 +52,13 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="Nome">Preço Procedimento <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="PrecoProduto" id="cnpj" name="PrecoProduto" placeholder="Apenas números" class="form-control input-md" required="" type="text"   pattern="[0-9]+$">
+                        <input asp-for="PrecoProduto" id="cnpj" name="PrecoProduto" placeholder="Apenas números" class="form-control input-md"  type="text"   pattern="[0-9]+$">
                         <span asp-validation-for="PrecoProduto" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="Nome">Preço Contra Oferta <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="Preco_contra" id="CodigoCnes" name="Preco_contra" placeholder="Apenas números" class="form-control input-md" required="" type="text"   pattern="[0-9]+$">
+                        <input asp-for="Preco_contra" id="CodigoCnes" name="Preco_contra" placeholder="Apenas números" class="form-control input-md"  type="text"   pattern="[0-9]+$">
                         <span asp-validation-for="Preco_contra" class="text-danger"></span>
                     </div>
                 </div>
@@ -67,14 +67,14 @@
 
                     <label class="col-md-2 control-label" for="TaxaParcelamento">Taxa Parcelamento <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="TaxaParcelamento" id="TaxaParcelamento" name="TaxaParcelamento" placeholder="Apenas números" class="form-control input-md" required="" type="number"  min="0" max="100" pattern="[0-9]+$">
+                        <input asp-for="TaxaParcelamento" id="TaxaParcelamento" name="TaxaParcelamento" placeholder="Apenas números" class="form-control input-md"  type="number"  min="0" max="100" pattern="[0-9]+$">
                         <span asp-validation-for="TaxaParcelamento" class="text-danger"></span>
                     </div>
 
 
                     <label class="col-md-2 control-label" for="TaxaResultado">Taxa Resultado <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="TaxaResultado" id="TaxaResultado" name="TaxaResultado" placeholder="Apenas números" class="form-control input-md" required="" type="number"   min="0" max="100" pattern="[0-9]+$">
+                        <input asp-for="TaxaResultado" id="TaxaResultado" name="TaxaResultado" placeholder="Apenas números" class="form-control input-md"  type="number"   min="0" max="100" pattern="[0-9]+$">
                         <span asp-validation-for="TaxaResultado" class="text-danger"></span>
                     </div>
                 </div>
@@ -82,13 +82,13 @@
 
                     <label class="col-md-2 control-label" for="ImagemHome">Imagem Home <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="ImagemHome" id="TaxaParcelamento" name="ImagemHome" class="form-control input-md" required="" type="url">
+                        <input asp-for="ImagemHome" id="TaxaParcelamento" name="ImagemHome" class="form-control input-md"  type="url">
                         <span asp-validation-for="ImagemHome" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="ImagemMain">Imagem Main</label>
                     <div class="col-md-3">
-                        <input asp-for="ImagemMain" id="TaxaParcelamento" name="ImagemMain" class="form-control input-md" required="" type="url">
+                        <input asp-for="ImagemMain" id="TaxaParcelamento" name="ImagemMain" class="form-control input-md"  type="url">
                         <span asp-validation-for="ImagemMain" class="text-danger"></span>
                     </div>
                 </div>
@@ -96,13 +96,13 @@
                 <div class="form-group">
                     <label class="col-md-2 control-label" for="ImagemHome">Imagem Thunb <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="ImagemThumb" id="TaxaParcelamento" name="ImagemThumb" class="form-control input-md" required="" type="url">
+                        <input asp-for="ImagemThumb" id="TaxaParcelamento" name="ImagemThumb" class="form-control input-md"  type="url">
                         <span asp-validation-for="ImagemThumb" class="text-danger"></span>
                     </div>
 
                     <label class="col-md-2 control-label" for="Video">Video <h11>*</h11></label>
                     <div class="col-md-3">
-                        <input asp-for="Video" id="Video" name="Video" class="form-control input-md" required="" type="url">
+                        <input asp-for="Video" id="Video" name="Video" class="form-control input-md"  type="url">
                         <span asp-validation-for="Video" class="text-danger"></span>
                     </div>
                 </div>
