--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/Components/PlanoInsert/Default.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/Components/PlanoInsert/Default.cshtml
@@ -1,16 +1,11 @@
-﻿@model api.portal.jenn.DTO.CategoriaProcedimento
+﻿@model api.portal.jenn.DTO.Plano
 
-@{
-    ViewData["Title"] = "Editar Categoria Tipo Procedimento";
-    Layout = "~/Views/Shared/_LayoutProcedimentos.cshtml";
-}
+    <form asp-controller="Convenio" asp-action="NovoPlano" class="form-horizontal">
+        <input type="hidden" value="@ViewBag.ConvenioID" id="ConvenioID" />
 
-    <form asp-controller="CategoriaProcedimento" asp-action="Edit" method="post" class="form-horizontal">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="CategoriaID" />
         <fieldset>
             <div class="panel panel-primary">
-                <div class="panel-heading">Editar  Categoria Para o tipo pocedimento</div>
+                <div class="panel-heading">Incluir Plano para o Convenio - @ViewBag.Convenio</div>
 
                 <div class="panel-body">
                     <div class="form-group">
@@ -20,27 +15,25 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="Nome"> Tipo <h11>*</h11></label>
+                        <label class="col-md-2 control-label" for="Nome">Plano  <h11>*</h11></label>
                         <div class="col-md-8">
                             <input id="Nome" asp-for="Nome" name="Nome" placeholder="" class="form-control input-md"  type="text">
                             <span asp-validation-for="Nome" class="text-danger"></span>
                         </div>
                     </div>
+
                     <div class="form-group">
                         <label class="col-md-2 control-label" for="Cadastrar"></label>
                         <div class="col-md-8">
-                            <button id="Cadastrar" name="Cadastrar" class="btn btn-success" type="Submit">Cadastrar</button>
-                            <a class="btn btn-info" asp-action="Index">Voltar Para a Lista de Categoria</a>
+                            <a id="Cadastrar" name="Cadastrar" class="btn btn-success">Adicionar</a>
                         </div>
                     </div>
                 </div>
             </div>
         </fieldset>
     </form>
+   
 
-
- 
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
