--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
         <img class="logo-footer" src="/img/logo-reduz-jenn.png" alt="" />
-        <p>Ghan consultoria e sistemas Ltda. Estrada das Lagrimas, 1877 São Caetano do Sul - SP</p>
+        <p>Ghan consultoria e sistemas Ltda. São Caetano do Sul - SP</p>
         <ul class="social">
             <li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>
             <li><a href="" title=""><img src="/img/social/icone-instagram.png" alt="" /></a></li>
