--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-select">
                         <div class="item-select">
-                            <span>Método de pagamento</span>
+                            <span>Forma de pagamento</span>
                         </div>
                         @await Component.InvokeAsync("Pagamentos")
                     </div>
@@ -112,7 +112,7 @@
 
                             <div class="accordion">
                                 <input id="toggle4" type="radio" class="accordion-toggle" name="toggle" />
-                                <label for="toggle4">Método de pagamento</label>
+                                <label for="toggle4">Forma de pagamento</label>
                                 <section>
                                     @await Component.InvokeAsync("Pagamentos")
                                 </section>
