--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                     </div>
                     <div class="col-select">
                         <div class="item-select">
-                            <span>Bairros</span>
+                            <span>Cidades</span>
                         </div>
                         @await Component.InvokeAsync("Bairros")
                     </div>
@@ -96,7 +96,7 @@
 
                             <div class="accordion">
                                 <input id="toggle2" type="radio" class="accordion-toggle" name="toggle" />
-                                <label for="toggle2">Bairro</label>
+                                <label for="toggle2">Cidades</label>
                                 <section>
                                     @await Component.InvokeAsync("Bairros")
                                 </section>
