ajuste preço de produtos

--- a/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
@@ -38,7 +38,10 @@
         }
 
         if (itemEmp.procedimento.procedimentoID == pesquisaViewModel.IdProcedimento)
+        {
             pesquisaViewModel.IdProcedimentoEmpresa = itemEmp.procedimentoEmpresaID;
+            pesquisaViewModel.precoProduto = itemEmp.precoProduto;
+        }
 
         if (itemEmp.agendas != null &&itemEmp.agendas.Count() > 0)
             consultaAgendaViewModels.AddRange(itemEmp.agendas);
