--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/Agendamento/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/Agendamento/Default.cshtml
@@ -22,7 +22,7 @@
                     <br>
                     <h4>Preço do exame particular</h4>
                     <br>
-                    @*<h4>R$ 100,00</h4>*@
+                    <h4>R$ @Model.precoProduto,00</h4>
                     <p>Compre online em até 12X</p>
                     <div class="">
                         <a style="background-color:#4472c4; " href="@Model.EnderecoLoja" class="btn btn-primary" title="">Ir para a loja virtual</a>
