--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/_LayoutEmpresa.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Shared/_LayoutEmpresa.cshtml
@@ -49,12 +49,12 @@
     <div class="container">
         <!-- Prepended text-->
         <div class="form-group">
-                <main role="main" class="pb-3">
-                    @RenderBody()
+            <main role="main" class="pb-3">
+                @RenderBody()
 
-                </main>
-            </div>
+            </main>
         </div>
+    </div>
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 -  Painel de Administração Portal Marketingplace Jenn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -69,6 +69,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script src="~/js/empresa.js" asp-append-version="true"></script>
+    <script src="~/js/procedimento_empresa.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
