--- a/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Index.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/ProcedimentoEmpresa/Index.cshtml
@@ -2,83 +2,72 @@
 
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutEmpresa.cshtml";
 }
-
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <h1>Lista Procedimento Empresa</h1>
 
 <p>
     <a asp-action="Create">Novo</a>
 </p>
-<table class="table
-       ">
-    <thead>
-        <tr>
-            <th>
-                Nome do Procedimento
-            </th>
-            <th>
-                Valor do Procedimento
-            </th>
-            <th>
-               Destaque
-            </th>
-            <th>
-                Vinculado a Empresa
-            </th>
-            <th>
-                Status
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="form-group">
+
+    <div class="col-md-3">
+    </div>
+    <table id="gridProcedimentoEmpresa" class="display" style="width:100%">
+        <thead>
             <tr>
+                <th>#</th>
+                <th>Tipo</th>
+                 <th>Nome</th>
+                <th>Destaque</th>
+                <th> Vinculado a Empresa</th>
+                <th> Status</th>
+                <th> Controle</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+            <tr>
+                <td> @Html.DisplayFor(modelItem => item.ProcedimentoEmpresaID)</td>
+                <td> @Html.DisplayFor(modelItem => item.Procedimento.TipoProcedimento.Nome)</td>
+                <td> @Html.DisplayFor(modelItem => item.Nome_pers)</td>
+
+                <td> @Html.DisplayFor(modelItem => item.Destaque)</td>
+                <td> @Html.DisplayFor(modelItem => item.Empresa.Nome)</td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Nome_pers)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PrecoProduto)
-                </td>
-                <td>@switch (item.Destaque)
-                     {
-                    case 1:
-                        {
-                    <a> Pagina Pesquisa</a>
-                        }
-                        break;
-                    case 0:
-                        {
-                            <a>Sem Destaque</a>
-                        }
-                        break;
-                      }
-                    
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Empresa.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Ativo)
+                    @if (item.Ativo == 1)
+                    {
+                        <i class="	fas fa-handshake"></i>
+                    }
+                    else
+                    {
+                        <i class="	fas fa-handshake-alt-slash"></i>
+                    }
                 </td>
                 <td>
                     @if (item.Ativo == 1)
                     {
-                        <a asp-action="Desativar" asp-route-id="@item.ProcedimentoEmpresaID">Des</a>
+                        <a asp-action="Desativar" class="fas fa-window-close" title="Desativar Procedimento" asp-route-id="@item.ProcedimentoEmpresaID"></a>
                     }
                     else
                     {
-                        <a asp-action="Desativar" asp-route-id="@item.ProcedimentoEmpresaID">Lig</a>
+                        <a asp-action="Desativar" class="far fa-window-close" title="Ligar Procedimento" asp-route-id="@item.ProcedimentoEmpresaID"></a>
 
                     }|
-                    <a asp-action="Edit" asp-route-id="@item.ProcedimentoEmpresaID">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ProcedimentoEmpresaID">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ProcedimentoEmpresaID">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.ProcedimentoEmpresaID" class='far fa-edit'></a>|
+
+                    <a asp-action="Details" asp-route-id="@item.ProcedimentoEmpresaID" title="Detalhar este Registro" class='fas fa-glasses'></a> |
+                    <a asp-action="Delete" asp-route-id="@item.ProcedimentoEmpresaID" title="Excluir este Registro" class='fas fa-eraser'></a>
                 </td>
             </tr>
-        }
-    </tbody>
-</table>
- 
+            }
+        </tbody>
+    </table>
+
+</div>
+<br />
+<br />
+
+
