--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
@@ -19,9 +19,9 @@
         <img class="logo-footer" src="/img/logo-reduz-jenn.png" alt="" />
         <p>Ghan consultoria e sistemas Ltda. São Caetano do Sul - SP</p>
         <ul class="social">
-            <li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>
-            <li><a href="" title=""><img src="/img/social/icone-instagram.png" alt="" /></a></li>
-            <li><a href="" title=""><img src="/img/social/icone-linkedin.png" alt="" /></a></li>
+            @*<li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>*@
+            <li><a href="https://www.instagram.com/jenn_saude/" target="_blank" title=""><img src="/img/social/icone-instagram.png" alt="" /></a></li>
+            <li><a href="https://www.linkedin.com/company/jenn" target="_blank" title=""><img src="/img/social/icone-linkedin.png" alt="" /></a></li>
         </ul>
     </div>
 </div>
