--- a/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
+++ b/src/frontend-crud/crud.ui.portal.jenn/Views/Procedimento/Create.cshtml
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="col-md-2 control-label" for="Categoria"> Categoria <h11>*</h11></label>
+                        <label class="col-md-2 control-label" for="TipoProcedimento"> Tipo Procedimento <h11>*</h11></label>
                         <div class="col-md-8">
 
                             <select class="form-control input-md" asp-for="TipoProcedimento"
